--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ Todos
 * Remove lxml dependency (but want to support py2.4).
 * Add mercurial(hg) support.
 * Add bazaar(bzr) support.
+* Add setting for the filtering of the file which it was saved at the same time, but is uninteresting.
 * Introduce customizable mail template.
 * Attach diff without printing in the main text.(config?)
 * Refactoring.
