--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,22 @@
 Todos
 ------
+
+Functionals
+~~~~~~~~~~~~
+* Introduce customizable mail template.
+* Remove base64 e-mail encoding always.
+* Add e-mail encoding (now using base64 encoded utf-8)
 * Add notify mechanism when lost target (maybe repository structure was changed)
-* Remove lxml dependency (but want to support py2.4).
+* Add setting for the filtering of the file which it was saved at the same time, but is uninteresting.
 * Add mercurial(hg) support.
 * Add bazaar(bzr) support.
-* Add setting for the filtering of the file which it was saved at the same time, but is uninteresting.
-* Introduce customizable mail template.
 * Attach diff without printing in the main text.(config?)
+* Speed-up for multi url polling.
+* Add generating ini file automatically, or using Paster template.
+
+Environments
+~~~~~~~~~~~~~
+* Remove lxml dependency (but want to support py2.4).
 * Refactoring.
 * Add test: multi url polling
 * Add test: Python2.4, 2.5, 2.6 support check.
