--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ Todos
 Functionals
 ~~~~~~~~~~~~
 * Add debug option '--debug / -d' for processing status output.
-* Add log output option '--log / -l' by :mod:`logging`.
+* Add log output option '--log / -l' by `logging` module.
 * Add filtering option for non-target file at same commit rev.
 * Introduce customizable mail template.
 * Remove base64 e-mail encoding always.
